--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
 
     <form action="numer2">
-        1 er Numero<input type="numero positivo" name="Numero positivo">
-        2 er Numero<input type="numero positivo" name="Numero">
+        1er Numero:<input type="numero positivo" name="Numero positivo">
+        2er Numero:<input type="numero positivo" name="Numero">
     </form>
     <div class="cuadros4">
     <div class="cuadro1">
